// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="sc-AxjAm colAFb"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="sc-AxjAm fleWmf"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="sc-AxjAm lfNRqO"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="sc-AxjAm hafMuf"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as outline 1`] = `
<div>
  <button
    class="sc-AxjAm ijlsne"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as plain 1`] = `
<div>
  <button
    class="sc-AxjAm fCKjFI"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent 1`] = `
<div>
  <button
    class="sc-AxjAm kcdgyM"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render contrast text if not primary 1`] = `
<div>
  <button
    class="sc-AxjAm bMrDTL"
    color="danger"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-AxjAm colAFb"
    color="primary"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`Button should render white text if primary 1`] = `
<div>
  <button
    class="sc-AxjAm colAFb"
    color="primary"
    type="button"
  />
</div>
`;
